# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  10 Mar 2008; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/chroot-functions.sh:
  Don't set --usepkg and --buildpkg when fetching

  07 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py:
  Change the warning thrown into make.conf when someone uses LDFLAGS so it is
  less confusing.

  05 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py:
  Merged ChangeLog.old and ChangeLog and added a note for myself to fix up the
  boot/kernel/${kname}/config copying code in generic_stage_target.

  05 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/kmerge.sh:
  Make sure we don't give genkernel a --kernel-config if it isn't set in the
  spec.

  05 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  modules/generic_stage_target.py, targets/support/kmerge.sh,
  targets/support/pre-kmerge.sh:
  Changed boot/kernel/${kname}/config and boot/kernel/${kname}/sources to be
  valid, rather than required, changed clst_ksource to default to
  virtual/linux-sources if boot/kernel/${kname}/sources is unset, moved
  removal of USE to after the kernel build so the modules get the correct USE,
  and did some minor cleanup on pre-kmerge. This is 2.0.6_pre13 for testing.

  05 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/kmerge.sh:
  We should run the default functions for kmerge.sh, too.

  05 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  -livecd/cdtar/aboot-0.9-r1-cdtar.tar.bz2,
  +livecd/cdtar/aboot-1.0_pre20040408-r2-cdtar.tar.bz2:
  Updated aboot cdtar with a newer version to support newer kernels.

  05 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-chroot.sh, targets/support/chroot-functions.sh:
  Updated make_destpath so it writes out to make.conf as well as exporting
  ROOT to the environment, added a make_destpath call to cleanup_stages, and