@@ -1079,7 +1079,8 @@ class generic_stage_target(generic_target):
 				myf.write('USE="'+string.join(myusevars)+'"\n')
 				if '-*' in myusevars:
 					print "\nWarning!!!  "
-					print "\tThe use of -* in " + self.settings["spec_prefix"] + "/use will cause portage to ignore\n"
+					print "\tThe use of -* in "+self.settings["spec_prefix"]+\
+						"/use will cause portage to ignore"
 					print "\tpackage.use in the profile and portage_confdir. You've been warned!"
 
 			""" Setup the portage overlay """
